<resources>
    <string name="app_name">FestivAman</string>
    <string name="title_activity_accueil">accueil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_accueil">Accueil</string>
    <string name="nav_compte_utilisateur">Compte utilisateur</string>
    <string name="nav_amis">Amis</string>
    <string name="nav_carte">Carte</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="new_profile">Nouvel utilisateur?</string>
    <string name="nouvel_utilisateur">Nouvel utilisateur</string>
    <string name="confirm_password">Confirmation du mot de passe</string>
    <string name="password_confirm">Confirmation mot de passe</string>
    <string name="modif_count">Modifications compte utilisateur</string>
    <string name="bitrthday_date">Date de naissance</string>
    <string name="picture">Photo</string>
</resources>
